--- a/package.json
+++ b/package.json
@@ -24,20 +24,18 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest-sorted": "^1.0.14",
     "pg": "^8.7.3"
   },
   "devDependencies": {
     "husky": "^8.0.2",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "nodemon": "^2.0.22",
     "pg-format": "^1.0.4",
     "supertest": "^6.3.3"
   },
   "jest": {
-    "setupFilesAfterEnv": [
-      "jest-sorted"
-    ]
+    "setupFilesAfterEnv": ["jest-sorted","jest-extended/all"]
   }
 }
