--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-games#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.7.3"
@@ -40,7 +41,6 @@
     "setupFilesAfterEnv": [
       "jest-extended/all",
       "jest-sorted"
-      
     ]
   }
 }
